--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,13 @@
     "ignore": [
         "**/.*",
         "node_modules",
+        "config",
+        "samples",
+        "scripts",
         "bower_components",
         "node_modules",
-        "test"
+        "test",
+        "*.*"
     ],
     "dependencies": {
         "angular": "1.2.11",
