--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "resume-io",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Resume builder based on a custom JSON file to track work history, education, projects, and skills. Fork and host on Github IO.",
     "ignore": [
         "**/.*",
@@ -9,14 +9,15 @@
         "samples",
         "scripts",
         "bower_components",
+        "bower.json",
+        "server.js",
         "node_modules",
-        "test",
-        "*.*"
+        "test"
     ],
     "dependencies": {
-        "angular": "1.2.11",
-        "angular-route": "latest",
-        "angular-sanitize": "latest",
+        "angular": ">=1.2.11",
+        "angular-route": ">=1.2.11",
+        "angular-sanitize": ">=1.2.11",
         "bootstrap": "3.0.3",
         "angular-bootstrap": "0.10.0",
         "angular-ui-bootstrap": "0.10.0",
